callout class update

--- a/force-app/main/default/classes/Developer_Assignment/Week_7/Assignment_1/UC_2/UsersPOSTCallout.cls
+++ b/force-app/main/default/classes/Developer_Assignment/Week_7/Assignment_1/UC_2/UsersPOSTCallout.cls
@@ -1,9 +1,70 @@
 public with sharing class UsersPOSTCallout {
     
+    /*
+    public with sharing class UsersPostCallout {
+    
+        public class UsersPOSTWrapper{
+            public Integer id;
+            public String name;
+            public String email;
+            public String gender;
+            public String status;
+        }
+    
+        public static Integer createUsersPost(List<Id> conIds) {
+            Http http = new Http();
+            HttpRequest request = new HttpRequest();
+            HttpResponse response = new HttpResponse();
+    
+            request.setEndpoint('https://gorest.co.in/public/v2/users');
+            request.setMethod('POST');
+            request.setHeader('Content-Type', 'application/json');
+            request.setHeader('Accept', 'application/json');
+            String token = '810ce423e72ea9311f874c44d7e4a16ca24b3ba9689449048f03e522f5120fa7';
+            request.setHeader('Authorization', 'Bearer ' + token);
+    
+            List<Contact> listCon = [SELECT ID, FirstName, LastName, Email, Gender__c, Statuss__c FROM Contact WHERE ID IN :conIds];
+            UsersPOSTWrapper wrap = new  UsersPOSTWrapper();
+            wrap.name = listCon[0].Lastname;
+            wrap.email = listCon[0].Email;
+            wrap.gender = listCon[0].Gender__c;
+            wrap.status = listCon[0].Statuss__c;
+    
+            String jsonString = JSON.serialize(wrap);
+            request.setBody(jsonString);
+            system.debug('Request string: ' + jsonString);
+            response = http.send(request);
+            system.debug('Response Code: ' + response.getStatusCode());
+    
+            return response.getStatusCode();
+            
+        }
+    
+    }
+
+
+
+    public with sharing class CallOutInvocable {
+        @InvocableMethod(label='Send Id'
+        description = 'METHOD for Callout'
+        category = 'Contact')
+        public static List<Integer> calloutMethod (List<Id> newIds){
+             Integer val = UsersPostCallout.createUsersPost(newIds);
+             List<Integer> vals = new List<Integer>();
+             vals.add(val);
+             return vals;
+        }
+     }
+
+
+     */
+
+
+
     // remote site setting 
     @future(callout=true)
     public static void createUsersPOST(List<Id> conIds){
-        
+        //UsersPOSTCallout.createUsersPOST('003Do000002UgwoIAC');
         Http http = new Http();
         HttpRequest request = new HttpRequest();
         HttpResponse response = new HttpResponse();
@@ -38,17 +99,17 @@ public with sharing class UsersPOSTCallout {
         List<Contact> conReq = [Select Id,Status__c,LastName,Gender__c,Email from Contact where ID IN :conIds];
             UsersPOSTWrapper wrapper2 = new UsersPOSTWrapper();
             wrapper2.id = 3344; //Just hardcoding eg, some code to indicate it is from salesforce environment
-            wrapper2.name = conReq[0].LastName;
-            wrapper2.status = conReq[0].Status__c;
-            wrapper2.email = conReq[0].Email;
-            wrapper2.gender = conReq[0].Gender__c;
+            wrapper2.name = 'Ahmet'; //conReq[0].LastName;
+            wrapper2.status = 'active'; //conReq[0].Status__c;
+            wrapper2.email = 'testahmet@gmail.com'; //conReq[0].Email;
+            wrapper2.gender =  'male'; //conReq[0].Gender__c;
 
-            // String jsonString = JSON.serialize(wrapper2);
+            String jsonString = System.JSON.serialize(wrapper2);
 
-            // request.setBody(jsonString);
+            request.setBody(jsonString);
 
-            // response = http.send(request);
-            // system.debug('Response Code : '+response.getStatusCode());
+            response = http.send(request);
+            system.debug('Response Code : '+response.getStatusCode());
 
 
         }
